--- a/Mac/alacritty/alacritty.yml
+++ b/Mac/alacritty/alacritty.yml
@@ -6,8 +6,8 @@ import:
 
 window:
   dimensions:
-    columns: 160
-    lines: 80
+    columns: 120
+    lines: 50
 
   decorations: buttonless
 
@@ -47,6 +47,15 @@ font:
     family: "VictorMono Nerd Font Mono"
     style: Medium Italic
 
+  offset:
+    x: 1
+    y: 1
+  glyph_offset:
+    x: 0
+    y: 0
+
+  draw_bold_text_with_bright_colors: true
+  transparent_background_colors: true
 
 live_config_reload: true
 
